examples/test/testpolicy15491.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15491
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key21: value45
      key10: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value20
          key14: value37
      podSelector:
        matchLabels:
          key19: value29
          key16: value38
          key2: value48
